# HydrofoilKalmanFilter

HydroEstimator/: CMakeLists.txt  CMakePresets.json  HydroEstimator.cpp  HydroEstimator.h  SimpleKalmanFilter.cpp  SimpleKalmanFilter.h
